<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activity.MainActivity"
    tools:ignore="LabelFor">

    <Button
        android:id="@+id/btnSendMsgToNextActivity"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="9dp"
        android:text="@string/wish_happy_birthday" />

    <Button
        android:id="@+id/btnShareToOtherApps"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="180dp"
        android:text="@string/share_to_other_apps" />

    <Button
        android:id="@+id/btnRecyclerViewDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp"
        android:text="@string/birthday_plans" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="391dp"
        android:layout_height="1271dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-560dp"
        app:srcCompat="@drawable/birds_cake"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-389dp"
        app:srcCompat="@drawable/ribbon_hbd" />

    <EditText
        android:id="@+id/etusermessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

</RelativeLayout>