<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/birthday_card" />

    <TextView
        android:id="@+id/txvUserMessage"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="0dp"
        android:text="@string/textview"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="36sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="58dp"
        android:text="@string/share" />

</RelativeLayout>